test/invalid/baseline/bigint64array-keyword.txt
Syntax error at line 1 in bigint64array-keyword.webidl:
interface BigInt64Array {};
          ^ Missing name in interface
